--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,44 +14,17 @@
                           th:object="${user}" method="post" class="m-t" role="form"
                           data-toggle="validator">
 
-                        <div th:if="${confirmationMessage}" class="alert alert-success"
-                             role="alert" th:text=${confirmationMessage}></div>
-
-                        <div th:if="${errorMessage}"
-                             class="alert alert-danger" role="alert"
-                             th:text="${errorMessage}"></div>
-
-                        <div th:if="${#fields.hasErrors('username')}"
-                             th:errors="*{username}"
-                             class="validation-message alert alert-danger" role="alert"></div>
-
-                        <div th:if="${#fields.hasErrors('password')}"
-                             th:errors="*{password}"
-                             class="validation-message alert alert-danger" role="alert"></div>
-
-
                         <div class="form-group input-group has-feedback">
-                            <label th:if="${#fields.hasErrors('username')}"
-                                   th:errors="*{username}" class="validation-message"></label>
-                            <span class="input-group-addon">
-                                <span class="glyphicon glyphicon-user"></span>
-                            </span>
 
-                            <input type="text" th:field="*{username}"
-                                   placeholder="User Name" class="form-control" required />
-                            <span class="glyphicon form-control-feedback"
-                                  aria-hidden="true"></span>
+                            <input type="text" th:field="*{username}" placeholder="User Name" class="form-control" required />
+
                         </div>
 
                         <div class="form-group input-group has-feedback">
-                            <span class="input-group-addon">
-                                <span class="glyphicon glyphicon-user"></span>
-                            </span>
-                            <input type="password" th:field="*{password}"
-                                   placeholder="Password" class="form-control" required />
-                            <span class="glyphicon form-control-feedback"
-                                  aria-hidden="true"></span>
+                            <input type="password" th:field="*{password}" placeholder="Password" class="form-control" required />
+
                         </div>
+                        
                         <div class="row">
                             <div class="col-xs-6 col-sm-6 col-md-6">
                                 <button type="submit" class="btn btn-lg btn-primary btn-block ">Register</button>
