--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,7 +4,7 @@
      Ref: https://getbootstrap.com/docs/4.0/examples/navbar-fixed/
 -->
 
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
     <div th:fragment="header-css">
         <meta charset="utf-8">
